apps/custom/hermes/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hermes-dashboard
  namespace: hermes
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`hermes.nmajor.net`)
      kind: Rule
      services:
        - name: hermes-dashboard
          port: 80
  tls: {}
